@@ -275,6 +275,73 @@ cipher_bench ( const char *algoname )
   putchar ('\n');
 }
 
+
+static void
+do_powm ( const char *n_str, const char *e_str, const char *m_str)
+{
+  GcryMPI e, n, msg, cip;
+  int i, err;
+
+  err = gcry_mpi_scan (&n, GCRYMPI_FMT_HEX, n_str, 0 );
+  if (err) BUG ();
+  err = gcry_mpi_scan (&e, GCRYMPI_FMT_HEX, e_str, 0);
+  if (err) BUG ();
+  err = gcry_mpi_scan (&msg, GCRYMPI_FMT_HEX, m_str, 0);
+  if (err) BUG ();
+
+  cip = gcry_mpi_new (0);
+
+  start_timer ();
+  for (i=0; i < 1000; i++)
+    gcry_mpi_powm (cip, msg, e, n);
+  stop_timer ();
+  printf (" %s", elapsed_time ()); fflush (stdout);
+/*    { */
+/*      char *buf; */
+
+/*      if (gcry_mpi_aprint (GCRYMPI_FMT_HEX, (void**)&buf, NULL, cip)) */
+/*        BUG (); */
+/*      printf ("result: %s\n", buf); */
+/*      gcry_free (buf); */
+/*    } */
+  gcry_mpi_release (cip);
+  gcry_mpi_release (msg);
+  gcry_mpi_release (n);
+  gcry_mpi_release (e);
+}
+
+
+static void
+mpi_bench (void)
+{
+  printf ("%-10s", "powm"); fflush (stdout);
+
+  do_powm (
+"20A94417D4D5EF2B2DA99165C7DC87DADB3979B72961AF90D09D59BA24CB9A10166FDCCC9C659F2B9626EC23F3FA425F564A072BA941B03FA81767CC289E4",
+           "29", 
+"B870187A323F1ECD5B8A0B4249507335A1C4CE8394F38FD76B08C78A42C58F6EA136ACF90DFE8603697B1694A3D81114D6117AC1811979C51C4DD013D52F8"
+           );
+  do_powm (
+           "20A94417D4D5EF2B2DA99165C7DC87DADB3979B72961AF90D09D59BA24CB9A10166FDCCC9C659F2B9626EC23F3FA425F564A072BA941B03FA81767CC289E41071F0246879A442658FBD18C1771571E7073EEEB2160BA0CBFB3404D627069A6CFBD53867AD2D9D40231648000787B5C84176B4336144644AE71A403CA40716",
+           "29", 
+           "B870187A323F1ECD5B8A0B4249507335A1C4CE8394F38FD76B08C78A42C58F6EA136ACF90DFE8603697B1694A3D81114D6117AC1811979C51C4DD013D52F8FC4EE4BB446B83E48ABED7DB81CBF5E81DE4759E8D68AC985846D999F96B0D8A80E5C69D272C766AB8A23B40D50A4FA889FBC2BD2624222D8EB297F4BAEF8593847"
+           );
+  do_powm (
+           "20A94417D4D5EF2B2DA99165C7DC87DADB3979B72961AF90D09D59BA24CB9A10166FDCCC9C659F2B9626EC23F3FA425F564A072BA941B03FA81767CC289E41071F0246879A442658FBD18C1771571E7073EEEB2160BA0CBFB3404D627069A6CFBD53867AD2D9D40231648000787B5C84176B4336144644AE71A403CA4071620A94417D4D5EF2B2DA99165C7DC87DADB3979B72961AF90D09D59BA24CB9A10166FDCCC9C659F2B9626EC23F3FA425F564A072BA941B03FA81767CC289E41071F0246879A442658FBD18C1771571E7073EEEB2160BA0CBFB3404D627069A6CFBD53867AD2D9D40231648000787B5C84176B4336144644AE71A403CA40716",
+           "29", 
+           "B870187A323F1ECD5B8A0B4249507335A1C4CE8394F38FD76B08C78A42C58F6EA136ACF90DFE8603697B1694A3D81114D6117AC1811979C51C4DD013D52F8FC4EE4BB446B83E48ABED7DB81CBF5E81DE4759E8D68AC985846D999F96B0D8A80E5C69D272C766AB8A23B40D50A4FA889FBC2BD2624222D8EB297F4BAEF8593847B870187A323F1ECD5B8A0B4249507335A1C4CE8394F38FD76B08C78A42C58F6EA136ACF90DFE8603697B1694A3D81114D6117AC1811979C51C4DD013D52F8FC4EE4BB446B83E48ABED7DB81CBF5E81DE4759E8D68AC985846D999F96B0D8A80E5C69D272C766AB8A23B40D50A4FA889FBC2BD2624222D8EB297F4BAEF8593847"
+           );
+
+  putchar ('\n');
+
+
+}
+
+
+
+
+
+
 int
 main( int argc, char **argv )
 {
@@ -298,6 +365,10 @@ main( int argc, char **argv )
     {
       for (argc--, argv++; argc; argc--, argv++)
         cipher_bench ( *argv );
+    }
+  else if ( !strcmp (*argv, "mpi"))
+    {
+        mpi_bench ();
     }
   else
     {
