@@ -1,6 +1,7 @@
 2002-09-17  Werner Koch  <wk@gnupg.org>
 
 	* benchmark.c: New.
+	(mpi_bench, do_powm): Add a a simple test for RSA.
 
 	* global.c (global_init): New.  Use it instead of the setting
 	any_init_done.  Initialize the ATH system.
